scrape-wiki.py: automatically update hashes in github action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - 'shard-hashes.json'
 
 jobs:
   build-and-release:
@@ -34,6 +36,14 @@ jobs:
 
       - name: Run format-fusions.py
         run: python format-fusions.py
+
+      - name: Push changed hashes
+        run: |
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git add shard-hashes.json
+          sed '1iUpdate shard hashes\n' changed-shards.txt | git commit -F -
+          git push
 
       - name: Create Release
         id: create_release
