--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add shard-hashes.json
-          sed '1iUpdate shard hashes\n' changed-shards.txt | git commit -F -
+          sed '1iUpdate shard hashes\n' changed-shards.txt | git commit -F - || echo "No changes to commit"
           git push
 
       - name: Create Release
