--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,11 @@ jobs:
           elif echo "$COMMIT_MSG" | grep -iq '\[master\]'; then
             echo "TARGET_BRANCH=master" >> $GITHUB_ENV
           else
-            echo "TARGET_BRANCH=master" >> $GITHUB_ENV
+            PREV_COMMIT_MSG=$(git log -2 --pretty=%B | tail -n +2)
+            if echo "$PREV_COMMIT_MSG" | grep -iq '\[dev\]'; then
+              echo "TARGET_BRANCH=dev" >> $GITHUB_ENV
+            else
+              echo "TARGET_BRANCH=master" >> $GITHUB_ENV
           fi
 
       - name: Push changed hashes
